# aiorchestration

./: .env.example  .gitignore  .mcp.json  ACTIVE_CODE_MANIFEST.md  CLAUDE.md  CURRENT_PHASE_IMPLEMENTATION.md  CURRENT_PROJECT_STRUCTURE.md  DECISIONS.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  JEST_VALIDATION_REPORT.md  Makefile  PHASE_EXECUTION_TEMPLATE.yaml  PHOENIX_CLEANUP_REPORT.md  README.md  STATUS.md  TECHNICAL_DEBT.md  TRACKER.md  command-template.md  complete-phase.sh  cross-intelligence.json  dashboard-template.md  gov.py  metrics.json  package-lock.json  package.json  personas.json  project.yaml  proper_governance_example.py  pyproject.toml  pytest.ini  quick-start-guide.md  setup.py  test_api_practices.db  test_dangerous.py  test_governance_hook.txt  test_governance_simple.py  test_mcp_integration.py  validate-code-documentation.sh  validate-session-end.sh  (+3 more)
.claude/: README.md  settings.local.json
.docs-metadata/: CLAUDE.meta.yaml  README.md  STATUS.meta.yaml  code-formats.yaml  validation-rules.yaml
.github/: README.md
.governance/: README.md  current_session.json  test-execution.db
ai-assistant/: .eslintrc.json  .vsconfig  ARCHITECTURE_ANALYSIS.md  CODE_QUALITY_REPORT.md  COMPLETE_IMPLEMENTATION_GUIDE.md  ENTERPRISE_AI_ASSISTANT_OVERVIEW.md  ORCHESTRATED_DOCUMENTATION.md  ORCHESTRATION_VALIDATION_REPORT.md  OVERALL_PROJECT_STATUS.md  README.md  SETUP_GUIDE.md  UI_SETUP_GUIDE.md  UI_UX_STRATEGY.md  check-pty.js  jest.config.js  package-lock.json  package.json  setup-pty.bat  setup-pty.ps1  tsconfig.spec.json  validate_recovery.py
claude/: PERSONAS.md  README.md
config/: README.md  app.config.development.json  app.config.json  app.config.production.json  feature-flags.json
docs/: ARCHITECTURE.md  FRONTEND_ROUNDTABLE_ANALYSIS.md  IMPLEMENTATION_PHASES.md  MASTER_IMPLEMENTATION_PLAN.md  README.md  TESTING_STRATEGY.md
governance/: config.yaml  documentation_standards.yaml  setup.py
governance-config/: enforcement-policies.yml  governance-rules.yml  living-docs.yml
(+920 files in other folders)
